--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "good-console": "^5.2.0",
     "hapi": "^11.1.1",
     "hapi-auth-basic": "^4.1.0",
-    "hapi-rbac": "^0.2.0"
+    "hapi-auth-cookie": "^3.1.0",
+    "hapi-rbac": "^0.2.0",
+    "mongoose": "^4.2.6"
   },
   "devDependencies": {},
   "scripts": {
