--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "bcrypt": "^0.8.5",
     "good": "^6.4.0",
     "good-console": "^5.2.0",
+    "handlebars": "^4.0.5",
     "hapi": "^11.1.1",
     "hapi-auth-basic": "^4.1.0",
     "hapi-auth-cookie": "^3.1.0",
     "hapi-rbac": "^0.2.0",
-    "mongoose": "^4.2.6"
+    "hoek": "^3.0.4",
+    "mongoose": "^4.2.6",
+    "path": "^0.12.7",
+    "vision": "^4.0.1"
   },
   "devDependencies": {},
   "scripts": {
