--- a/package.json
+++ b/package.json
@@ -8,9 +8,35 @@
     "angular-resource": "^1.4.8",
     "angular-route": "^1.4.8",
     "bcrypt": "^0.8.5",
+    "better-console": "^0.2.4",
     "boom": "^3.0.0",
+    "del": "^2.1.0",
+    "extend": "^3.0.0",
     "good": "^6.4.0",
     "good-console": "^5.2.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-chmod": "^1.3.0",
+    "gulp-clone": "^1.0.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.2.0",
+    "gulp-copy": "0.0.2",
+    "gulp-dedupe": "0.0.2",
+    "gulp-flatten": "^0.2.0",
+    "gulp-header": "^1.7.1",
+    "gulp-help": "^1.6.1",
+    "gulp-if": "^2.0.0",
+    "gulp-less": "^3.0.5",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-print": "^2.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-rtlcss": "^0.1.4",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.5",
     "handlebars": "^4.0.5",
     "hapi": "^11.1.1",
     "hapi-auth-basic": "^4.1.0",
@@ -19,9 +45,14 @@
     "hoek": "^3.0.4",
     "inert": "^3.2.0",
     "joi": "^7.0.0",
+    "map-stream": "0.0.6",
     "mongoose": "^4.2.6",
     "path": "^0.12.7",
-    "vision": "^4.0.1"
+    "require-dot-file": "^0.4.0",
+    "run-sequence": "^1.1.5",
+    "semantic-ui": "^2.1.6",
+    "vision": "^4.0.1",
+    "yamljs": "^0.2.4"
   },
   "devDependencies": {},
   "scripts": {
