--- a/public/bower.json
+++ b/public/bower.json
@@ -9,6 +9,7 @@
     "angular": "~1.4.8",
     "angular-route": "~1.4.8",
     "angular-resource": "~1.4.8",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "angular-material": "~0.11.4"
   }
 }
