--- a/public/bower.json
+++ b/public/bower.json
@@ -7,9 +7,9 @@
   "private": true,
   "dependencies": {
     "angular": "~1.4.8",
-    "angular-route": "~1.4.8",
-    "angular-resource": "~1.4.8",
     "angular-ui-router": "~0.2.15",
-    "angular-material": "~0.11.4"
+    "angular-material": "~0.11.4",
+    "angular-animate": "~1.4.8",
+    "angular-aria": "~1.4.8"
   }
 }
