--- a/public/bower.json
+++ b/public/bower.json
@@ -10,6 +10,7 @@
     "angular-ui-router": "~0.2.15",
     "angular-material": "~0.11.4",
     "angular-animate": "~1.4.8",
-    "angular-aria": "~1.4.8"
+    "angular-aria": "~1.4.8",
+    "jquery": "~2.1.4"
   }
 }
