--- a/public/bower.json
+++ b/public/bower.json
@@ -11,6 +11,7 @@
     "angular-material": "~0.11.4",
     "angular-animate": "~1.4.8",
     "angular-aria": "~1.4.8",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "semantic": "semantic-ui#~2.1.6"
   }
 }
