--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^4.2.6",
     "mongoose-double": "0.0.1",
     "path": "^0.12.7",
-    "vision": "^4.0.1"
+    "vision": "^4.0.1",
+    "mqtt": "^1.6.3"
   },
   "devDependencies": {},
   "scripts": {
